wordpress-tutum/tcs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tutumwp
spec:
  ports:
    - name: http
      port: 80
  selector:
    role: tutumwp
