wordpress-tutum/wp-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tutumwp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: tutumwp.cloudgenius.co
      http:
        paths:
        - path: /
          backend:
            serviceName: tutumwp
            servicePort: 80
  tls:
    - hosts:
        - "tutumwp.cloudgenius.co"
      secretName: tutumwp.cloudgenius.co
